--- a/prepros-6.config
+++ b/prepros-6.config
@@ -22,16 +22,27 @@
     {
       "path": "dev/scss/reset.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"public/css/reset.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "dev/scss/common/main.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"public/css/main.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "dev/scss/common/reset.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "dev/scss/sections/main.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"public/css/main.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "dev/pug/includes",
-      "dev/pug/sections",
       "dev",
-      "dev/scss",
       "dev/pug",
-      "dev/html"
+      "dev/html",
+      "public"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -53,10 +64,17 @@
         "dev/pug/sections/header.jade",
         "dev/pug/sections/footer.jade"
       ]
+    },
+    {
+      "path": "dev/scss/main.scss",
+      "imports": [
+        "dev/scss/common/reset.scss",
+        "dev/scss/common/main.scss"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
