--- a/prepros-6.config
+++ b/prepros-6.config
@@ -69,7 +69,10 @@
       "path": "dev/scss/main.scss",
       "imports": [
         "dev/scss/common/reset.scss",
-        "dev/scss/common/main.scss"
+        "dev/scss/common/main.scss",
+        "dev/scss/ui/button.scss",
+        "dev/scss/index/product-details.scss",
+        "dev/scss/index/about.scss"
       ]
     }
   ],
