--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,7 +42,10 @@
       "dev",
       "dev/pug",
       "dev/html",
-      "public"
+      "public",
+      "dev/scss",
+      "dev/scss/common",
+      "dev/scss/ui"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -77,7 +80,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
